# rinha-backend-2026-detecta-fraude

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.native  LICENSE  LICENSE.detecta-fraude  README.md  docker-compose.exact.yml  docker-compose.native.yml  docker-compose.yml  haproxy.cfg  info.json  nginx.conf
.github/workflows/: publish-image.yml
scripts/: build_index.py  local_benchmark.js  prepare_submission_branch.sh  race.sh  test.sh
src/: consts.rs  index.rs  lib.rs  main.rs  model.rs  parse.rs  response.rs  server.rs  time.rs  vectorize.rs
tests/: index_knn.rs  model_probe.rs
tests/fixtures/: references.json
